fixed alignment issues and put space between flexboxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 70px;
 }
 
 header {
@@ -22,13 +23,7 @@ header {
     justify-content: space-between;
     background-color: var(--header-background-color);
     align-items: center;
-    /* padding-top: 40px santi */
-    /* padding-bottom: 10px santi */
-    /* margin-top: -20px santi */
-    /* margin-left: -10px santi */
-    /* margin-right: -20px santi */
     padding: 10px 0 10px 0;
-    /* white-space: nowrap; santi */
 }
 
 header h1 {
@@ -68,15 +63,11 @@ main {
 .banner {
     width: 100%;
     padding-bottom: 30px;
-    /* margin-left: -100; santi */
-    /* max-width: fit-content; santi */
 }
 
 .banner img {
     height: 350px;
     width: 100%;
-    /* margin-left: -10px;
-    margin-right: 30px;  santi*/
 }
 
 .my-picture img {
@@ -92,6 +83,8 @@ main {
 color: var(--header-background-color);
 font-size: 2.5rem;
 display: flex;
+max-width: fit-content;
+margin-left: 70px;
 }
 
 #about-me .verticalline {
@@ -99,12 +92,11 @@ display: flex;
     height: 150px;
     padding: 10px;
     position: absolute;
-    margin-top: 50px;
 }
 
 #about-me p {
     color: var(--header-background-color);
-    margin-left: 250px;
+    margin-left: 280px;
     max-width: 1100px;
     margin-top: 30px;
     font-size: 1rem;
@@ -113,12 +105,13 @@ display: flex;
 #work {
     font-size: 2.5rem;
     display: flex;
-    margin-top: 150px;
+    margin-top: 130px;
+    margin-left: 150px;
 }
 
 #work .verticalline {
     border-right: 6px solid var(--name-background-color);
-    height: 550px;
+    height: 600px;
     padding: 10px;
     position: absolute;
 }
@@ -130,16 +123,14 @@ a {
 .big-pic {
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
     color: var(--header-background-color);
+    padding-bottom: 10px;
 }
 
 .surf-report {
     flex: 1 0 200px;
     border: 3px solid var(--name-background-color);
-    margin-left: 190px;
-    padding-bottom: 10px;
-    /* padding-right: 900px; */
+    margin-left: 200px;
     background-color: var(--flexbox-background);
     max-width: 1200px;
     background-image: url(../images/white-rhino.jpg);
@@ -176,6 +167,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     color: var(--header-background-color);
+    gap: 10px
 }
 
 .led-wall {
@@ -184,12 +176,11 @@ a {
     margin-left: 200px;
     background-color: var(--flexbox-background);
     max-width: 600px;
-    height: 110px;
+    height: 130px;
     background-image: url(../images/red-flower.jpg);
     background-size: 600px;
     background-position: 100px;
     cursor: pointer;
-    padding-bottom: 15px;
 }
 
 .led-wall:hover {
@@ -216,15 +207,13 @@ a {
 .calculator {
     flex: 1 0 550px;
     border: 3px solid var(--name-background-color);
-    /* margin-left: 1020px; santi*/
     background-color: var(--flexbox-background);
     max-width: 600px;
-    height: 110px;
+    height: 130px;
     background-image: url(../images/green-snake.jpg);
     background-size: 600px;
     background-position: 35px;
     cursor: pointer;
-    padding-bottom: 35px;
 }
 
 .calculator:hover {
@@ -238,13 +227,11 @@ a {
 
 .calculator h2 {
     padding-left: 10px;
-    margin-top: 70px;
-    /* white-space: nowrap; santi*/
+    margin-top: 50px;
 }
 
 .calculator p {
     text-align: left;
-    /* margin-left: -180px; santi */
     padding-bottom: 5px;
     padding-left: 10px;
     font-size: 1.5rem;
@@ -256,13 +243,12 @@ a {
     margin-left: 200px;
     background-color: var(--flexbox-background);
     max-width: 600px;
-    height: 110px;
+    height: 130px;
     background-image: url(../images/purple-flower.jpg);
     background-size: 650px;
     background-position: 0px;
     background-repeat: no-repeat;
     cursor: pointer;
-    padding-bottom: 15px;
 }
 
 .pastel-puzzles:hover {
@@ -290,16 +276,14 @@ a {
 .run-buddy {
     flex: 1 0 550px;
     border: 3px solid var(--name-background-color);
-    /* margin-left: 1020px; santi */
     background-color: var(--flexbox-background);
     max-width: 600px;
-    height: 110px;
+    height: 130px;
     background-image: url(../images/clouded-leopard.jpg);
     background-size: 600px;
     background-position: 0px;
     background-repeat: no-repeat;
     cursor: pointer;
-    padding-bottom: 15px;
 }
 
 .run-buddy:hover {
@@ -329,11 +313,12 @@ a {
     font-size: 2.5rem;
     display: flex;
     margin-top: 100px;
+    margin-left: 37px;
 }
 
 #contact-me .verticalline {
     border-right: 6px solid var(--name-background-color);
-    height: 170px;
+    height: 130px;
     padding: 10px;
     position: absolute;
 }
@@ -346,7 +331,7 @@ a {
     text-underline-offset: 6px;
     min-width: 75vw;
     margin-left: 300px;
-    margin-top: 150px;
+    margin-top: 80px;
 }
 
 .contact-details ul {
@@ -355,8 +340,14 @@ a {
     padding-bottom: 20px;
 }
 
-media screen and (max-width: 768px) {
-    body {
-        flex-direction: column;
+media screen and (max-width: 1230) {
+    .small-pics {
+        flex-direction: column
+    }
 }
+
+media screen and (max-width: 768px) {
+    .small-pics {
+        flex-direction: column
+    }
 }
